<resources>
    <string name="app_name">Pass Note</string>
    <!--      Activity Login      -->
    <string name="loginEditTextUsername">e-mail</string>
    <string name="loginEditTextPassword">Pssword</string>
    <string name="loginSingIn">Login</string>
    <string name="loginSingUp">Signup</string>
    <string name="loginForgot">Forgot your password ?</string>
    <string name="login_authentication_failed">Incorrect username or password</string>
    <string name="login_credentials_required">Username and password are required</string>
    <!--      Activity Signup    -->
    <string name="singupEditTextNames">Names</string>
    <string name="singupEditTextSurnames">Surnames</string>
    <string name="singupEditTextEmail">Email</string>
    <string name="singupEditTextUsername">Username</string>
    <string name="singupEditTextPassword">Passsword</string>
    <string name="singupEditTextConfirmPassword">Confirm Passsword</string>
    <string name="singupButtonRegister">Register</string>
    <string name="title_activity_accounts">Accounts</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">search</string>
    <string name="signupErrorPasswordMismatch">Passwords are not the same</string>
    <string name="genericError">An error has occurred</string>
    <string name="loginPasswordResetEmailSent">Please check your e-mail to reset your password</string>
    <string name="loginEmailRequiredForPasswordReset">Please enter your email</string>
    <string name="loginEmailNotFound">E-mail not found.</string>
    <string name="signupFieldsAreRequired">All fields are required.</string>
    <string name="signupUsernameTaken">The username already exists</string>
    <string name="signupEmailTaken">The e-mail already exists</string>
    <string name="signupWeakPassword">The password is not strong</string>
    <string name="singupInvalidEmail">The e-mail is not valid</string>
    <string name="action_settings">Other actions</string>
    <string name="drawer_accounts">Accounts</string>
    <string name="drawerNotes">Notes</string>
    <string name="drawerReminders">Reminders</string>
    <string name="drawerRepeatedPasswords">Repeated Passwords</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="addAccountTitle">Add Account</string>
    <string name="addAccountCancelBtn">Cancel</string>
    <string name="addAccountSaveBtn">Save</string>
    <string name="addAccountInputName">Website name</string>
    <string name="addAccountInputURL">URL</string>
    <string name="addAccountInputUsername">Username</string>
    <string name="addAccountInputPassword">Password</string>
    <string name="addAccountSiteNameRequired">Site name is required</string>
    <string name="addAccountURLRequired">URL is required</string>
    <string name="addAccountUsernameRequired">Username is required</string>
    <string name="addAccountPasswordRequired">Password is required</string>
    <string name="addAccountDataSavedOK">Data saved successfully</string>
    <string name="updateAccountTitle">Update Account</string>
    <string name="addAccountContextMenuSelect">Select:</string>
    <string name="accountsContextMenuEdit">Edit</string>
    <string name="accountsContextMenuCopyUsername">Copy username</string>
    <string name="accountsContextMenuCopyPassword">Copy password</string>
    <string name="accountsContextMenuCopyURL">Copy URL</string>
    <string name="accountsContextMenuDelete">Delete</string>
    <string name="accountsDeleteConfirmation">The account has been deleted successfully</string>
    <string name="accountsUsernameLabel">Username</string>
    <string name="accountsPasswordLabel">Password</string>
    <string name="accontsURLLabel">URL</string>
    <string name="accountsUsernameCopiedConfirmation">Copied username to clipboard</string>
    <string name="accountsPasswordCopiedConfirmation">Copied password to clipboard</string>
    <string name="accountsURLCopiedConfirmation">URL copied to clipboard</string>
    <string name="reminderName">Reminder Name</string>
    <string name="addReminderTitle">Add Reminder</string>
    <string name="addReminderNameRequired">Reminder name is required</string>
    <string name="addReminderDataSavedOK">Data saved successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_save_notes">fragment_save_notes</string>
    <string name="addNoteTitle">Add Note</string>
    <string name="noteName">Note Name</string>
    <string name="noteText">Note Text</string>
</resources>
