<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="25dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="0dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addAccountLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/passnotelogowhite" />

            <TextView
                android:id="@+id/addAccountTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/addAccountTitle"
                android:gravity="center"
                android:textSize="30dp"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/addAccountName"
            style="@style/editText_style"
            android:hint="@string/addAccountInputName" />

        <EditText
            android:id="@+id/addAccountURL"
            style="@style/editText_style"
            android:hint="@string/addAccountInputURL"/>

        <EditText
            android:id="@+id/addAccountUsername"
            style="@style/editText_style"
            android:hint="@string/addAccountInputUsername"/>

        <EditText
            android:id="@+id/loginPassword"
            style="@style/editText_style"
            android:hint="@string/addAccountInputPassword"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addAccountCancelBtn"
                style="@style/button_style"
                android:layout_weight="1"
                android:onClick="cancel"
                android:text="@string/addAccountCancelBtn" />

            <Button
                android:id="@+id/addAccountSaveBtn"
                style="@style/button_style"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/addAccountSaveBtn" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loginLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>
