<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="25dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/addReminderLogo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        app:srcCompat="@drawable/passnotelogowhite" />

                    <TextView
                        android:id="@+id/addReminderTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/addNoteTitle"
                        android:textColor="@color/colorWhithe"
                        android:textSize="30dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/reminderName"
                    style="@style/editText_style"
                    android:hint="@string/noteName" />


                <EditText
                    android:id="@+id/reminderName2"
                    style="@style/editText_style_notes"
                    android:layout_width="match_parent"
                    android:layout_height="268dp"
                    android:hint="@string/noteText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addReminderCancelBtn"
                        style="@style/button_style"
                        android:layout_weight="1"
                        android:onClick="cancel"
                        android:text="@string/addAccountCancelBtn" />

                    <Button
                        android:id="@+id/addReminderSaveBtn"
                        style="@style/button_style"
                        android:layout_weight="1"
                        android:onClick="save"
                        android:text="@string/addAccountSaveBtn" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RemindersLoadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>


